; ModuleID = '/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_pop_image.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_pop_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.forth_stack = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@ft_image = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.forth_stack*, i32**, i8*)* @pop_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pop_image(%struct.forth_stack* %0, i32** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.forth_stack*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i8*, align 8
  store %struct.forth_stack* %0, %struct.forth_stack** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %9 = load i32, i32* @ft_image, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 @check_type(%struct.forth_stack* %8, i32 %9, i8* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %28

14:                                               ; preds = %3
  %15 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %16 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = load %struct.forth_stack*, %struct.forth_stack** %5, align 8
  %19 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = add nsw i32 %20, -1
  store i32 %21, i32* %19, align 8
  %22 = sext i32 %20 to i64
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = inttoptr i64 %25 to i32*
  %27 = load i32**, i32*** %6, align 8
  store i32* %26, i32** %27, align 8
  store i32 1, i32* %4, align 4
  br label %28

28:                                               ; preds = %14, %13
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @check_type(%struct.forth_stack*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
